# ChirpNeighbors

./: .gitignore  README.md  TESTING_GUIDE.md  TEST_QUICKREF.md  claude.md  docker-compose.yml  stream.raw
.github/workflows/: README.md  pre-commit.yml  tests.yml
ai_models/: .gitignore  Dockerfile.inference  Dockerfile.training  README.md  docker-compose.yml  requirements-dev.txt  requirements-inference.txt  requirements-training.txt
ai_models/config/: model_config.yaml
ai_models/inference/api/: main.py
ai_models/scripts/: quick_test.py
ai_models/training/scripts/: train_lora.py
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_BACKEND.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend-inference/: README.md  environment.yml
backend-inference/app/: main.py
backend-inference/app/services/: audio_player.py  audio_visualizer.py  stream_handler.py
backend/app/: __init__.py  main.py
backend/app/api/: responses.py
backend/app/api/v1/: __init__.py  audio.py  birds.py  devices.py
backend/app/core/: config.py  constants.py  time_utils.py
backend/app/db/: __init__.py  base.py  init_db.py  models.py  seed_species.py  utils.py
backend/app/models/: audio.py  bird.py
backend/app/services/: audio_processor.py
backend/app/tests/: README.md  __init__.py  conftest.py  factories.py  test_api_audio.py  test_api_birds.py  test_api_devices.py  test_audio_upload.py  test_integration_esp32.py  test_main.py  test_models.py
docs/: README.md
docs/agents/: 20251115_184034_documentation-setup.md  20251118_182130_dx-optimizer-fullstack-scaffolding.md  20251118_191631_ai-engineer-bird-visual-generation-plan.md  20251118_192345_ai-engineer-system-scaffolding.md  20251118_194422_esp32-firmware-scaffolding.md  20251118_194500_next-steps-analysis.md  README.md  code_audit_fixes_summary.md  code_audit_report.md  test-framework-summary.md
docs/architecture/: product-requirements.md
esp32-client/: README.md  platformio.ini  server.py  status.md
esp32-client/include/: globals.h  settings_api.h  settings_manager.h  settings_web.h
esp32-client/src/: main.cpp  settings_api.cpp  settings_manager.cpp
firmware/: .gitignore  README.md  TESTING.md  platformio.ini
firmware/include/: APIClient.h  AudioCapture.h  Beamformer.h  OTAUpdater.h  PowerManager.h  WiFiManager.h  config.h  config_base.h  config_respeaker.h  debug.h
firmware/src/: APIClient.cpp  AudioCapture.cpp  Beamformer.cpp  OTAUpdater.cpp  PowerManager.cpp  WiFiManager.cpp  main.cpp
firmware/test/: README.md  test_api_client.cpp  test_audio_capture.cpp  test_beamformer.cpp
frontend/: .eslintrc.cjs  .gitignore  .lintstagedrc.json  .prettierignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
scripts/: mock_esp32_client.py  run_all_tests.sh
(+3 files in other folders)
